force-app/main/default/objects/Account/fields/AnypointPlatformOrganizationId2_Region__c.field-meta.xml
<CustomField>
    <fullName>AnypointPlatformOrganizationId2_Region__c</fullName>
    <label>AnypointPlatformOrganizationId2 Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AnypointPlatformOrganizationId_Region</valueSetName>
    </valueSet>
</CustomField>