force-app/main/default/objects/Account/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>Calculates an Account&apos;s Annual Recurring Revenue</description>
    <label>ARR</label>
    <summarizedField>Opportunity.Product_Annual_Sum__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Renewal</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Sales Qualified Lead PW, Sales Qualified Lead - Stale, Proposal Out, Negotiation, Sales Qualified Lead, Closed Won, Closed Lost, Rejected Lead</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>