force-app/main/default/objects/Account/fields/CS_Area__c.field-meta.xml
<CustomField>
    <fullName>CS_Area__c</fullName>
    <label>CS Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Territory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>CBU</fullName>
            </value>
            <value>
                <fullName>CMT</fullName>
            </value>
            <value>
                <fullName>DACH</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>EBU</fullName>
            </value>
            <value>
                <fullName>FINS</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>HLS</fullName>
            </value>
            <value>
                <fullName>Indian Sub</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>PubSec</fullName>
            </value>
            <value>
                <fullName>RCG</fullName>
            </value>
            <value>
                <fullName>ROA</fullName>
            </value>
            <value>
                <fullName>ROE</fullName>
            </value>
            <value>
                <fullName>ROW</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>