force-app/main/default/objects/Account/fields/CS_Tech_Priority__c.field-meta.xml
<CustomField>
    <fullName>CS_Tech_Priority__c</fullName>
    <label>CS Tech Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>