force-app/main/default/objects/Account/fields/CSSA_Renewal_Quota__c.field-meta.xml
<CustomField>
    <fullName>CSSA_Renewal_Quota__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Location: will be used for reporting only – should not be on a page layout for any function – we just need to be able to report on this field
Business justification: For compensation, we need a reliable way to track which accounts will be included in the CSSA renewal quota.


Case #08239234</description>
    <label>CSSA Renewal Quota</label>
    <type>Checkbox</type>
</CustomField>