force-app/main/default/objects/Account/fields/Focus_Account_Level__c.field-meta.xml
<CustomField>
    <fullName>Focus_Account_Level__c</fullName>
    <label>Focus Account Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Theater</fullName>
            </value>
            <value>
                <fullName>Area</fullName>
            </value>
            <value>
                <fullName>Sales Team</fullName>
            </value>
            <value>
                <fullName>Sales Sub Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>