force-app/main/default/objects/Account/fields/Next_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Renewal_Date__c</fullName>
    <description>shows the next renewal close date</description>
    <label>Next Renewal Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Renewal</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>