force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region</description>
    <label>OU</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Territory__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>ROA</fullName>
            </value>
            <value>
                <fullName>ROW</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>FINS</fullName>
            </value>
            <value>
                <fullName>HLS</fullName>
            </value>
            <value>
                <fullName>RCG</fullName>
            </value>
            <value>
                <fullName>CMT</fullName>
            </value>
            <value>
                <fullName>EBU</fullName>
            </value>
            <value>
                <fullName>CBU</fullName>
            </value>
            <value>
                <fullName>PubSec</fullName>
            </value>
            <value>
                <fullName>DACH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>