force-app/main/default/objects/Account/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Territory__c</columns>
    <columns>Region__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>